# HumanGR

./: .env.example  .gitignore  MASTER_REQUIREMENTS_MAP.md  PIPELINE_INTEGRATION_REPORT.md  README.md  ROADMAP_BLOCK_01_DISSECTION.md  ROADMAP_BLOCK_02_ARCHITECTURE.md  ROADMAP_BLOCK_03_RESOURCES_AND_BUILDER.md  ROADMAP_BLOCK_04_DATA_MODELS.md  ROADMAP_BLOCK_05_MODELS_COMPLETE.md  ROADMAP_BLOCK_06_LLM_INTEGRATION.md  ROADMAP_BLOCK_07_BROWSER_AUTOMATION.md  ROADMAP_BLOCK_08_CORE_ENGINE.md  ROADMAP_BLOCK_09_HUMAN_LAYERS.md  ROADMAP_BLOCK_10_PERSPECTIVES.md  ROADMAP_BLOCK_11_COGNITIVE.md  ROADMAP_BLOCK_12_MCP_SERVER.md  ROADMAP_BLOCK_13_CLOUD_MONETIZATION.md  SPRINT_INDEX.yaml  SPRINT_PLAN.md  pyproject.toml
cockpit/: __init__.py  cockpit_transformer.py  resilience_reader.py  server.py  state_reader.py
configs/: EXECUTION_MODE.yaml  cost_policy.yml  evaluation_stacks.yaml  execution_policy.yml  gate_catalog_seed.yml
context_packs/: CONTEXT_PACKS_INDEX.yaml  DIAGRAMS_CONTEXT.md  GITHUB_PROFILE_CONTEXT.md  MARKETING_CONTEXT.md  PRODUCT_PACK.md  S00_CONTEXT.md  S01_CONTEXT.md  S02_CONTEXT.md  S03_CONTEXT.md  S04_CONTEXT.md  S05_CONTEXT.md  S06_CONTEXT.md  S07_CONTEXT.md  S08_CONTEXT.md  S09_CONTEXT.md  S10_CONTEXT.md  S11_CONTEXT.md  S12_CONTEXT.md  S13_CONTEXT.md  S14_CONTEXT.md  S15_CONTEXT.md  S16_CONTEXT.md  S17_CONTEXT.md  S18_CONTEXT.md  S19_CONTEXT.md  S20_CONTEXT.md  S21_CONTEXT.md  S22_CONTEXT.md  S23_CONTEXT.md  S24_CONTEXT.md  S25_CONTEXT.md  S26_CONTEXT.md  S27_CONTEXT.md  S28_CONTEXT.md  S29_CONTEXT.md  S30_CONTEXT.md  S31_CONTEXT.md  S32_CONTEXT.md  (+9 more)
(+150 files in other folders)
